Bug 795173: Make Debugger.Object.prototype.evalInGlobalWithBindings pass the right 'this' value. r=jorendorff

This also adds a test for Debugger.Frame.prototype.evalWithBindings, to
make sure it puts new variables on the right object; I couldn't find any
existing tests for the non-strict case (Frame-evalWithBindings-11.js
handles the strict mode case).